app in progress - corrected column layout issue on discover page

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -39,7 +39,7 @@ h1 {
   border: dashed medium blue
 }
 
-.container {
+.imageContainer {
   position: relative;
 }
 
